finish initial layout of cranberry recipe

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Some Beloved Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="./recipes/cranberry-sauce-a-la-bart.html">Cranberry sauce, a la Bart</a>
+    <h1>Selected Recipes From Springfield</h1>
+    <a href="./recipes/cranberry-sauce-a-la-bart.html">Cranberry sauce, <i>&#224 la</i> Bart</a>
 </body>
 </html>
