--- a/recipes/cranberry-sauce-a-la-bart.html
+++ b/recipes/cranberry-sauce-a-la-bart.html
@@ -4,9 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cranberry Sauce &#224 la Bart</title>
 </head>
 <body>
-    <h1>Cranberry Sauce a la Bart</h1>
+    <h1>Cranberry Sauce <i>&#224 la</i> Bart</h1>
+    <img src = "../images/Cranberry.jpg">
+    <p>
+        This classic dish combines the delightful tang of cranberries, 
+        the sweetness of sugar, and the jiggle of pectin.  You, of
+        course, need not worry yourself with any of the messy details.  
+        It's a recipe any pre-teen <em> can </em> handle.
+    </p>
+    <h3> You'll need:</h3>
+    <ul>
+        <li> One can jellied-style cranberry sauce</li>
+        <li> Can opener</li>
+        <li> Rimmed serving plate</li>
+    </ul>
+
+    <h3> Directions:</h3>
+    <ol>
+        <li> Open one end of the can with the can opener</li>
+        <li> Gently slide cranberry sauce onto serving plate.  Expect 
+             satisfying <em>pop and plop</em> sounds as the sauce exits 
+             the can </li>
+        <li> Present with a flourish and enjoy!</li>
+    </ol>
+
+    <h3>Pro Tips:</h3>
+    <ul>
+        <li> Just stick it in the refrigerator until ready to serve. The 
+             dish will retain it's signature tube shape longer.
+        </li>
+        <li> Puncture the underside of the can before opening the lid makes
+            it easier to pour out the sauce.  But you lose the <em> pop and 
+            plop</em> effect.
+        </li>
+    </ul> 
+    <a href="../index.html"> Return to main page</a:>   
 </body>
 </html>
