add files for soup and moe; drafted moe

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Selected Recipes From Springfield</h1>
     <a href="./recipes/cranberry-sauce-a-la-bart.html">Cranberry sauce, <i>&#224 la</i> Bart</a>
+    <a href="./recipes/flaming-moe.html">Flaming Moe</a>
 </body>
 </html>
