add image and intro text to index.html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,20 @@
     <title>Some Beloved Recipes</title>
 </head>
 <body>
+    <img src="./images/comeForTheFood.jpg">
     <h1>Selected Recipes From Springfield</h1>
-    <a href="./recipes/cranberry-sauce-a-la-bart.html">Cranberry sauce, <i>&#224 la</i> Bart</a>
-    <a href="./recipes/flaming-moe.html">Flaming Moe</a>
+    <p>If your actions aren't those of someone who had all they could eat
+        then try some of these classic dishes from Springfield. Bottomless
+        Pete might be nature's cruellest mistake, but these treats aren't.  
+    </p>
+    <p>
+        <a href="./recipes/cranberry-sauce-a-la-bart.html">Cranberry sauce, <i>&#224 la</i> Bart</a>
+    </p>
+    <p>
+            <a href="./recipes/flaming-moe.html">Flaming Moe</a>
+    </p>
+    <p>
+            <a href="./recipes/ripping-lentil-soup.html">A Ripping Lentil Soup</a>
+    </p>
 </body>
 </html>
