drafted lentil soup page. First full draft

--- a/recipes/ripping-lentil-soup.html
+++ b/recipes/ripping-lentil-soup.html
@@ -4,41 +4,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cranberry Sauce &#224 la Bart</title>
+    <title>A Ripping Lentil Soup</title>
 </head>
 <body>
     <h1>Cranberry Sauce <i>&#224 la</i> Bart</h1>
-    <img src = "../images/Cranberry.jpg">
+    <img src = "../images/apusSecretGarden.jpeg">
     <p>
-        This classic dish combines the delightful tang of cranberries, 
-        the sweetness of sugar, and the jiggle of pectin.  You, of
-        course, need not worry yourself with any of the messy details.  
-        It's a recipe any pre-teen <em> can </em> handle.
+        This soup is great for an afternoon concert in Apu's Secret Garden.
+        But don't serve it at the wedding if you're marrying a carrot; the 
+        guests might recognize friends among the ingredients.  Serves 2-3 as listed.
     </p>
     <h3> You'll need:</h3>
     <ul>
-        <li> One can jellied-style cranberry sauce</li>
-        <li> Can opener</li>
-        <li> Rimmed serving plate</li>
+        <li> 2T vegetable oil</li>
+        <li> 1 medium onion, chopped</li>
+        <li> 1 cup carrots, chopped</li>
+        <li> 2 sticks celery, chopped</li>
+        <li> 1 clove garlic, crushed</li>
+        <li> 1/2 cup lentils</li>
+        <li> 1 bay leaf</li>
+        <li> 1 T freshly chopped parsley</li>
+        <li> Salt and freshly ground pepper, to taste</li>
+        <li> 2 1/4 cup vegetable stock or water</li>
+        <li> additional parsley (for garnish, optional)</li>
+        <li> lemon wedges (for garnish, optional)</li>
     </ul>
 
     <h3> Directions:</h3>
     <ol>
-        <li> Open one end of the can with the can opener</li>
-        <li> Gently slide cranberry sauce onto serving plate.  Expect 
-             satisfying <em>pop and plop</em> sounds as the sauce exits 
-             the can </li>
-        <li> Present with a flourish and enjoy!</li>
+        <li> Add the oil to a medium pot and heat over medium heat.
+        </li>
+        <li> Add the onion, carrot, and celery and stir. Cook, 
+            stirring occasionally, until the onion is mostly 
+            translucent (about 5 minutes). 
+        </li>
+        <li> Add the garlic and parsley and stir. Cook 1 more minute 
+            until fragrant. Season with salt and pepper.
+        </li>
+        <li>
+            Add the lentils and stir. Add the broth and bay leaf. Bring 
+            to a boil and cover.
+        </li>
+        <li>Reduce to a simmer. Cook lentils according to the package 
+            directions. Whole green lentils typically take 40-45 minutes.
+        </li>
+        <li> 
+            Taste for doneness and seasoning.  Adjust salt and pepper 
+            as needed
+        </li>
+        <li> 
+            Serve in soup bowls with additional parsley and a lemon wedge.
+        </li>
     </ol>
 
     <h3>Pro Tips:</h3>
     <ul>
-        <li> Just stick it in the refrigerator until ready to serve. The 
-             dish will retain it's signature tube shape longer.
+        <li> 
+            Add a pinch of cumin or paprika alongside the onion to add a smoky flavor.
         </li>
-        <li> Puncture the underside of the can before opening the lid makes
-            it easier to pour out the sauce.  But you lose the <em> pop and 
-            plop</em> effect.
+        <li>
+            Try different types of lentils until you find your favorite.
+        </li>
+        <li> 
+            Top with grated Parmesean cheese or a dollop of sour cream to enhance the 
+            flavor.  Use vegan substitutes if you want to avoid Apu's scorn.
         </li>
     </ul> 
     <a href="../index.html"> Return to main page</a:>   
