add alt text to all images.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Some Beloved Recipes</title>
 </head>
 <body>
-    <img src="./images/comeForTheFood.jpg">
+    <img src="./images/comeForTheFood.jpg" 
+    alt="Homer Simpson enjoying all he can eat at a seafood restaurant.">
+    
     <h1>Selected Recipes From Springfield</h1>
     <p>If your actions aren't those of someone who had all they could eat
         then try some of these classic dishes from Springfield. Bottomless
