--- a/recipes/cranberry-sauce-a-la-bart.html
+++ b/recipes/cranberry-sauce-a-la-bart.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Cranberry Sauce <i>&#224 la</i> Bart</h1>
-    <img src = "../images/Cranberry.jpg">
+    <img src = "../images/Cranberry.jpg"
+    alt="Bart plating cranberry sauce.">
     <p>
         This classic dish combines the delightful tang of cranberries, 
         the sweetness of sugar, and the jiggle of pectin.  You, of
