--- a/recipes/flaming-moe.html
+++ b/recipes/flaming-moe.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>The Flaming Moe</h1>
-    <img src = "../images/flamingMoe.jpg">
+    <img src = "../images/flamingMoe.jpg" alt="Homer's drink is set on fire by his sister in law">
     <p>
         "I don't know the scientific explanation, but fire made it good."
     </p>
