--- a/recipes/ripping-lentil-soup.html
+++ b/recipes/ripping-lentil-soup.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Cranberry Sauce <i>&#224 la</i> Bart</h1>
-    <img src = "../images/apusSecretGarden.jpeg">
+    <img src = "../images/apusSecretGarden.jpeg" 
+    alt="Lisa, Apu, and the McCartneys enjoy Apu's rooftop garden.">
+    
     <p>
         This soup is great for an afternoon concert in Apu's Secret Garden.
         But don't serve it at the wedding if you're marrying a carrot; the 
