copyedit all pages.  Ready for posting

--- a/index.html
+++ b/index.html
@@ -4,25 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Some Beloved Recipes</title>
+    <title>Some Beloved Recipes From Springfield</title>
 </head>
 <body>
     <img src="./images/comeForTheFood.jpg" 
     alt="Homer Simpson enjoying all he can eat at a seafood restaurant.">
     
     <h1>Selected Recipes From Springfield</h1>
-    <p>If your actions aren't those of someone who had all they could eat
+    <p>If your actions don't sound like those of someone who had all they could eat
         then try some of these classic dishes from Springfield. Bottomless
-        Pete might be nature's cruellest mistake, but these treats aren't.  
+        Pete might be nature's cruellest mistake, but these treats aren't!  
     </p>
-    <p>
-        <a href="./recipes/cranberry-sauce-a-la-bart.html">Cranberry sauce, <i>&#224 la</i> Bart</a>
-    </p>
-    <p>
+    <ul>
+        <li>
+            <a href="./recipes/cranberry-sauce-a-la-bart.html">Cranberry sauce, <i>&#224 la</i> Bart</a>
+        </li>
+        <li>
             <a href="./recipes/flaming-moe.html">Flaming Moe</a>
-    </p>
-    <p>
+        </li>
+        <li>
             <a href="./recipes/ripping-lentil-soup.html">A Ripping Lentil Soup</a>
-    </p>
+        </li>
+    </ul>
 </body>
 </html>
