--- a/recipes/cranberry-sauce-a-la-bart.html
+++ b/recipes/cranberry-sauce-a-la-bart.html
@@ -18,17 +18,17 @@
     </p>
     <h3> You'll need:</h3>
     <ul>
-        <li> One can jellied-style cranberry sauce</li>
-        <li> Can opener</li>
-        <li> Rimmed serving plate</li>
+        <li> One can jellied-style cranberry sauce.</li>
+        <li> Can opener.</li>
+        <li> Rimmed serving plate.</li>
     </ul>
 
     <h3> Directions:</h3>
     <ol>
-        <li> Open one end of the can with the can opener</li>
+        <li> Open one end of the can with the can opener.</li>
         <li> Gently slide cranberry sauce onto serving plate.  Expect 
              satisfying <em>pop and plop</em> sounds as the sauce exits 
-             the can </li>
+             the can. </li>
         <li> Present with a flourish and enjoy!</li>
     </ol>
 
@@ -37,7 +37,7 @@
         <li> Just stick it in the refrigerator until ready to serve. The 
              dish will retain it's signature tube shape longer.
         </li>
-        <li> Puncture the underside of the can before opening the lid makes
+        <li> Puncturing the underside of the can before opening the lid makes
             it easier to pour out the sauce.  But you lose the <em> pop and 
             plop</em> effect.
         </li>
