--- a/recipes/flaming-moe.html
+++ b/recipes/flaming-moe.html
@@ -16,23 +16,23 @@
     <ul>
         <li> Remnants of assorted liquors and spirits</li>
         <li> Love.</li>
-        <li> Krusty's Non Narkotik Cough Syrup.  Grape flavor is traditional.</li>
-        <li> A blender </li>
-        <li> A pint glass or similar for serving </li>
-        <li> A lit cigarette or other source of flame</li>
+        <li> Krusty's Non Narkotik Kough Syrup.  Grape flavor is traditional.</li>
+        <li> A blender. </li>
+        <li> Pint glasses or similar for serving. </li>
+        <li> A lit cigarette or other source of flame.</li>
     </ul>
 
     <h3> Directions:</h3>
     <ol>
         <li> Pour assorted liquors and spirits into blender. You'll need a total 
-            of one pint worth per serving</li>
+            of one pint worth per serving.</li>
         <li> Add two Tbs of love.  Nah, just kidding.  Someone was screwing with
             the gas chromatograph.
         </li>
-        <li> Add a substantial glug of Kough syrup per serving </li>
-        <li> Blend thoroughly</li>
-        <li> Pour into serving glasses</li>
-        <li> Check for blindness.  <strong>This step is vital</strong>
+        <li> Add a substantial glug of Kough Syrup per serving. </li>
+        <li> Blend thoroughly.</li>
+        <li> Pour into serving glasses.</li>
+        <li> Check for blindness.  <strong>This step is vital.</strong>
             <ul>
                 <li>Take a <em>small</em> sip.</li>
                 <li>Wave hand in front of face.</li>
