--- a/recipes/ripping-lentil-soup.html
+++ b/recipes/ripping-lentil-soup.html
@@ -14,22 +14,22 @@
     <p>
         This soup is great for an afternoon concert in Apu's Secret Garden.
         But don't serve it at the wedding if you're marrying a carrot; the 
-        guests might recognize friends among the ingredients.  Serves 2-3 as listed.
+        guests might recognize friends among the ingredients.  Serves 2-3.
     </p>
     <h3> You'll need:</h3>
     <ul>
-        <li> 2T vegetable oil</li>
-        <li> 1 medium onion, chopped</li>
-        <li> 1 cup carrots, chopped</li>
-        <li> 2 sticks celery, chopped</li>
-        <li> 1 clove garlic, crushed</li>
-        <li> 1/2 cup lentils</li>
-        <li> 1 bay leaf</li>
-        <li> 1 T freshly chopped parsley</li>
-        <li> Salt and freshly ground pepper, to taste</li>
-        <li> 2 1/4 cup vegetable stock or water</li>
-        <li> additional parsley (for garnish, optional)</li>
-        <li> lemon wedges (for garnish, optional)</li>
+        <li> 2T vegetable oil.</li>
+        <li> 1 medium onion, chopped.</li>
+        <li> 1 cup carrots, chopped.</li>
+        <li> 2 sticks celery, chopped.</li>
+        <li> 1 clove garlic, crushed.</li>
+        <li> 1/2 cup lentils.</li>
+        <li> 1 bay leaf.</li>
+        <li> 1 T freshly chopped parsley.</li>
+        <li> Salt and freshly ground pepper, to taste.</li>
+        <li> 2 1/4 cup vegetable stock or water.</li>
+        <li> additional parsley (for garnish, optional).</li>
+        <li> lemon wedges (for garnish, optional).</li>
     </ul>
 
     <h3> Directions:</h3>
@@ -52,7 +52,7 @@
         </li>
         <li> 
             Taste for doneness and seasoning.  Adjust salt and pepper 
-            as needed
+            as needed.
         </li>
         <li> 
             Serve in soup bowls with additional parsley and a lemon wedge.
