--- a/recipes/ripping-lentil-soup.html
+++ b/recipes/ripping-lentil-soup.html
@@ -7,7 +7,7 @@
     <title>A Ripping Lentil Soup</title>
 </head>
 <body>
-    <h1>Cranberry Sauce <i>&#224 la</i> Bart</h1>
+    <h1>A Ripping Lentil Soup!</h1>
     <img src = "../images/apusSecretGarden.jpeg" 
     alt="Lisa, Apu, and the McCartneys enjoy Apu's rooftop garden.">
     
