begin styling with CSS

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Some Beloved Recipes From Springfield</title>
+    <link rel="stylesheet" media="all" href="styles.css">
 </head>
 <body>
-    <img src="./images/comeForTheFood.jpg" 
+    <img class="picture" src="./images/comeForTheFood.jpg" 
     alt="Homer Simpson enjoying all he can eat at a seafood restaurant.">
     
-    <h1>Selected Recipes From Springfield</h1>
-    <p>If your actions don't sound like those of someone who had all they could eat
+    <h1 class="text">Selected Recipes From Springfield</h1>
+    <p class="text"> If your actions don't sound like those of someone who had all they could eat
         then try some of these classic dishes from Springfield. Bottomless
         Pete might be nature's cruellest mistake, but these treats aren't!  
     </p>
