--- a/index.html
+++ b/index.html
@@ -11,21 +11,24 @@
     <img class="picture" src="./images/comeForTheFood.jpg" 
     alt="Homer Simpson enjoying all he can eat at a seafood restaurant.">
     
+   
     <h1 class="text">Selected Recipes From Springfield</h1>
     <p class="text"> If your actions don't sound like those of someone who had all they could eat
-        then try some of these classic dishes from Springfield. Bottomless
-        Pete might be nature's cruellest mistake, but these treats aren't!  
+            then try some of these classic dishes from Springfield. Bottomless
+            Pete might be nature's cruellest mistake, but these treats aren't!  
     </p>
-    <ul>
-        <li>
-            <a href="./recipes/cranberry-sauce-a-la-bart.html">Cranberry sauce, <i>&#224 la</i> Bart</a>
-        </li>
-        <li>
-            <a href="./recipes/flaming-moe.html">Flaming Moe</a>
-        </li>
-        <li>
-            <a href="./recipes/ripping-lentil-soup.html">A Ripping Lentil Soup</a>
-        </li>
-    </ul>
+    <div>
+        <ul>
+            <li>
+                <a href="./recipes/cranberry-sauce-a-la-bart.html">Cranberry sauce, <i>&#224 la</i> Bart</a>
+            </li>
+            <li>
+                <a href="./recipes/flaming-moe.html">Flaming Moe</a>
+            </li>
+            <li>
+                <a href="./recipes/ripping-lentil-soup.html">A Ripping Lentil Soup</a>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
