update style to cranberry sauce as first recipe

--- a/recipes/cranberry-sauce-a-la-bart.html
+++ b/recipes/cranberry-sauce-a-la-bart.html
@@ -5,17 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cranberry Sauce &#224 la Bart</title>
+    <link rel="stylesheet" media="all" href="../styles.css">
 </head>
 <body>
-    <h1>Cranberry Sauce <i>&#224 la</i> Bart</h1>
-    <img src = "../images/Cranberry.jpg"
+    
+    <img class="picture" src="../images/Cranberry.jpg"
     alt="Bart plating cranberry sauce.">
-    <p>
+    <h1 class="text">Cranberry Sauce <i>&#224 la</i> Bart</h1>
+    <p class="text">
         This classic dish combines the delightful tang of cranberries, 
         the sweetness of sugar, and the jiggle of pectin.  You, of
         course, need not worry yourself with any of the messy details.  
         It's a recipe any pre-teen <em> can </em> handle.
     </p>
+    <div>
     <h3> You'll need:</h3>
     <ul>
         <li> One can jellied-style cranberry sauce.</li>
@@ -42,6 +45,8 @@
             plop</em> effect.
         </li>
     </ul> 
+    </div>
     <a href="../index.html"> Return to main page</a:>   
+    
 </body>
 </html>
