update style to all recipes.  Set background yellow

--- a/recipes/flaming-moe.html
+++ b/recipes/flaming-moe.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Flaming Moe</title>
+    <link rel="stylesheet" media="all" href="../styles.css">
 </head>
 <body>
-    <h1>The Flaming Moe</h1>
-    <img src = "../images/flamingMoe.jpg" alt="Homer's drink is set on fire by his sister in law">
-    <p>
+    
+    <img class="picture" src = "../images/flamingMoe.jpg" alt="Homer's drink is set on fire by his sister in law">
+    <h1 class="text">The Flaming Moe</h1>
+    <p class="text">
         "I don't know the scientific explanation, but fire made it good."
     </p>
+    <div>
     <h3> You'll need:</h3>
     <ul>
         <li> Remnants of assorted liquors and spirits</li>
@@ -53,7 +56,8 @@
         <li> Keep a fire extinguisher and burn cream handy.  
         </li>
         <li> No, Aerosmith probably won't be in tonight.</li>
-    </ul> 
+    </ul>
+</div> 
     <a href="../index.html"> Return to main page</a:>   
 </body>
 </html>
