--- a/recipes/ripping-lentil-soup.html
+++ b/recipes/ripping-lentil-soup.html
@@ -5,17 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Ripping Lentil Soup</title>
+    <link rel="stylesheet" media="all" href="../styles.css">
+
 </head>
 <body>
-    <h1>A Ripping Lentil Soup!</h1>
-    <img src = "../images/apusSecretGarden.jpeg" 
-    alt="Lisa, Apu, and the McCartneys enjoy Apu's rooftop garden.">
     
-    <p>
+    <img class="picture" src = "../images/apusSecretGarden.jpeg" 
+    alt="Lisa, Apu, and the McCartneys enjoy Apu's rooftop garden.">
+    <h1 class="text">A Ripping Lentil Soup!</h1>
+    <p class="text">
         This soup is great for an afternoon concert in Apu's Secret Garden.
         But don't serve it at the wedding if you're marrying a carrot; the 
         guests might recognize friends among the ingredients.  Serves 2-3.
     </p>
+    <div>
     <h3> You'll need:</h3>
     <ul>
         <li> 2T vegetable oil.</li>
@@ -71,7 +74,8 @@
             Top with grated Parmesean cheese or a dollop of sour cream to enhance the 
             flavor.  Use vegan substitutes if you want to avoid Apu's scorn.
         </li>
-    </ul> 
+    </ul>
+    </div> 
     <a href="../index.html"> Return to main page</a:>   
 </body>
 </html>
